# HologramFire

./: .dockerignore  .gitignore  .pre-commit-config.yaml  GITHUB_PAGES_DEPLOYMENT.md  Makefile  README.md  REPOSITORY_STRUCTURE.md  RUN_INSTRUCTIONS.md  Run.bat  Run.html  Run.sh  demo.manifest.json  index.html  package.json  pytest.ini
bridge/: cli.js
config/: demo.manifest.json  tsconfig.json  vitest.config.ts
core/: COMPLETE_OS_PRIMITIVES_IMPLEMENTATION.md  TRUE_INTERNET_OS_IMPLEMENTATION.md  package.json  tsconfig.json
deployment/: Dockerfile  docker-compose.yml  run-with-docker.ps1
docs/: AHA-DEMO.md  AUTOMATED_PROOF_GENERATION.md  DAY2_OPS_PLAYBOOK.md  ENHANCED_ORACLE_IMPLEMENTATION.md  FINAL_SIGN_OFF_CHECKLIST.md  FINAL_SIGN_OFF_COMPLETE.md  GO_LIVE_CHECKLIST.md  HOLOGRAM_FRAMEWORK_STRUCTURE.md  HOLOGRAM_ORACLE_PROCESS.md  HOLOGRAM_PERFORMANCE_OPTIMIZATION.md  INFRASTRUCTURE_MODALITY_IMPLEMENTATION.md  IPFS_LOCK_PREVENTION.md  JSON_SCHEMA_UNIVERSAL_PROGRAMMING_IMPLEMENTATION.md  META_SELF_AWARENESS_LAYER.md  ML_ENHANCED_ORACLE_IMPLEMENTATION.md  OPERATIONAL_WRAPUP.md  ORACLE_CONSOLIDATION_MIGRATION.md  ORACLE_INTEGRATION_REQUIREMENTS.md  ORACLE_LATENCY_OPTIMIZATION.md  PHASE05_SETUP_COMPLETE.md  PHASE0_SETUP_COMPLETE.md  PHASE6_PERFORMANCE_SLO_IMPLEMENTATION.md  PHASE7_SECURITY_IMPLEMENTATION.md  PHASE8_PRODUCTION_READY.md  PHASE9_LAST_MILE_COMPLETE.md  PRODUCTION_GAPS_RESOLUTION.md  PRODUCTION_READY_COMPLETE.md  QUANTUM_RESISTANT_CRYPTOGRAPHY.md  QUICKSTART.md  RED_BUILD_RUNBOOK.md  SINGLE_UNIFIED_CONTEXT_IMPLEMENTATION.md  WINDOWS_DEV_SETUP.md
examples/: advanced-proof-chain-demo.js  proof-chain-visualization.md  run-all-examples.sh  run-proof-chain-example.js  simple-proof-chain-demo.js
firebase-studio-frontend/: .nojekyll  README.md  deploy.bat  deploy.sh  (+4 more)
hologram-sdk/sdks/python/hologram_docker/: client.py  pyproject.toml  setup.py
hologram-sdk/sdks/python/hologram_docker/hologram_docker/: __init__.py  api.py  client.py  errors.py  subsystems.py  transport.py
hologram-sdk/sdks/python/hologram_docker/hologram_docker.egg-info/: PKG-INFO  SOURCES.txt
libs/hologram-sdk/: INTEGRATION_VERIFICATION.md  Makefile  PHASE2_QUICKSTART.md  QUICKSTART.md  TESTING.md  build.sh  demo.bat  demo.sh  fix-oracle-violations.py  hologram_generator_mini.py  hologramd.yaml  package.json  pyproject.toml  requirements.txt  run-demo.bat  run-tests.sh
libs/hologram-sdk/deployment/: hologramd.service
libs/hologram-sdk/engine/cmd/hologramd/: installer_output.go  main.go
libs/hologram-sdk/engine/internal/api/: parity_test.go
libs/hologram-sdk/engine/internal/api/server/: handlers_networks.go
libs/hologram-sdk/engine/internal/blueprint/: enforce.go  invariants.go  profiles.go
libs/hologram-sdk/engine/internal/events/: bus.go  types.go
libs/hologram-sdk/engine/internal/images/: resolver.go  store.go  witness.go
libs/hologram-sdk/engine/internal/networks/: ctp96.go
libs/hologram-sdk/engine/internal/runtime/: images.go  logs.go  oracle.go  phase1_test.go  runtime.go  sandbox_proc.go  volumes.go  witness.go
libs/hologram-sdk/engine/internal/volumes/: store.go
libs/hologram-sdk/engine/tests/: smoke_test_node.js
libs/hologram-sdk/modules/: hologram-docker-python.json  hologram-engine.json
libs/hologram-sdk/scripts/: dev.sh
libs/hologram-sdk/sdks/c/: hologram.cjs
libs/hologram-sdk/sdks/node/hologramode/: package.json
libs/hologram-sdk/sdks/python/hologram/: README.md  pyproject.toml
libs/hologram-sdk/sdks/python/hologram/hologram/: client.py  ctp96.py  images.py  oracle.py  space.py  uor.py  vpi.py  witness.py
libs/hologram-sdk/sdks/python/hologram_docker/: README.md  __init__.py  api.py  errors.py
libs/hologram-sdk/sdks/python/hologram_docker/hologram_docker/: hologram.py
libs/hologram-sdk/sdks/python/hologram_docker/hologram_docker.egg-info/: requires.txt  top_level.txt
libs/hologram-sdk/sdks/ref/: cli.ts
libs/hologram-sdk/sdks/rust/: Cargo.toml
libs/hologram-sdk/sdks/rust/src/: main.rs
libs/hologram-sdk/tests/go/: enforce_test.go  verbose_inspect_test.go
libs/hologram-sdk/tests/oracle/: sdk-oracle-validation.js
libs/hologram-sdk/tests/parity/: parity_test.go  py_ping_and_images.py
libs/hologram-sdk/tests/parity/golden/: images.json
(+903 files in other folders)
