[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hologram-docker"
version = "0.1.0"
description = "Drop-in Docker SDK replacement with Hologram features"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hologram Team", email = "team@hologram.dev"},
]
keywords = ["docker", "hologram", "containers", "compat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "requests-unixsocket>=0.3.0",
    "urllib3>=1.26.0",
    "websocket-client>=1.6.0",
    "six>=1.15.0",
    "docker-pycreds>=0.4.0",
    "docker>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.900",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/hologram/sdks"
Repository = "https://github.com/hologram/sdks"
Documentation = "https://docs.hologram.dev"
"Bug Tracker" = "https://github.com/hologram/sdks/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hologram_docker*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["hologram_docker"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
